--- a/IQuiz/Base.lproj/Main.storyboard
+++ b/IQuiz/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                     <outlet property="descrLabel" destination="b4j-4q-Cav" id="7Wc-mv-zLE"/>
                                     <outlet property="imageLabel" destination="mVm-sK-Tre" id="7n4-fD-Ipg"/>
                                     <outlet property="subjectLabel" destination="zEL-Y5-oXs" id="YR6-6C-pkI"/>
-                                    <segue destination="hqO-yP-xrV" kind="show" id="bxE-06-JjH"/>
+                                    <segue destination="5oD-vC-J8z" kind="show" id="e1S-zV-Aqp"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -69,6 +69,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eb3-Ku-jyb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1024.8" y="48.125937031484263"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="gKl-q0-TsP">
+            <objects>
+                <viewController id="5oD-vC-J8z" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="NWN-UY-ntm"/>
+                        <viewControllerLayoutGuide type="bottom" id="e1d-Dh-ROc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CzS-Ev-1tq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zuq-nG-R46" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1731" y="45"/>
         </scene>
         <!--Subject Add View Controller-->
         <scene sceneID="8Ps-2e-Suw">
@@ -145,34 +163,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o5r-Tl-fMu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1025.625" y="730.9859154929577"/>
-        </scene>
-        <!--Quiz Table View Controller-->
-        <scene sceneID="E6O-ly-ge5">
-            <objects>
-                <tableViewController id="hqO-yP-xrV" customClass="QuizTableViewController" customModule="IQuiz" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="zed-RQ-eZ1">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ISQ-Vi-KyP">
-                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ISQ-Vi-KyP" id="g0h-uo-F2X">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="hqO-yP-xrV" id="LWM-zx-pYt"/>
-                            <outlet property="delegate" destination="hqO-yP-xrV" id="b7A-A8-xIY"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DfQ-2q-ryu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1735.2" y="44.527736131934034"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="60N-P8-IrG">
