--- a/IQuiz/Base.lproj/Main.storyboard
+++ b/IQuiz/Base.lproj/Main.storyboard
@@ -110,7 +110,6 @@
                                     <barButtonItem title="Back" id="eP1-kb-K7E">
                                         <connections>
                                             <action selector="backHome:" destination="5oD-vC-J8z" id="91J-YR-coW"/>
-                                            <segue destination="0eq-Jo-71J" kind="show" identifier="BackHome" action="showDetailViewController:sender:" id="ZIg-34-heb"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="tRW-k6-Lny"/>
@@ -127,6 +126,9 @@
                                 <state key="normal" title="A">
                                     <color key="titleColor" red="0.26404436535295905" green="0.98204191596340396" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="answerAButton:" destination="5oD-vC-J8z" eventType="touchUpInside" id="Ln0-g9-GHl"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B3g-MZ-XiE">
                                 <rect key="frame" x="16" y="333" width="288" height="34"/>
@@ -134,6 +136,9 @@
                                 <state key="normal" title="B">
                                     <color key="titleColor" red="0.26404436539999998" green="0.98204191600000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="answerBButton:" destination="5oD-vC-J8z" eventType="touchUpInside" id="sTE-Yp-ctH"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2x-a3-Gp5">
                                 <rect key="frame" x="16" y="375" width="288" height="34"/>
@@ -141,6 +146,9 @@
                                 <state key="normal" title="C">
                                     <color key="titleColor" red="0.26404436539999998" green="0.98204191600000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="answerCButton:" destination="5oD-vC-J8z" eventType="touchUpInside" id="MCe-Sj-JBf"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gh2-HC-Cso">
                                 <rect key="frame" x="16" y="417" width="288" height="34"/>
@@ -148,6 +156,9 @@
                                 <state key="normal" title="D">
                                     <color key="titleColor" red="0.26404436539999998" green="0.98204191600000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="answerDButton:" destination="5oD-vC-J8z" eventType="touchUpInside" id="t5P-rC-8ip"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Question" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pgj-ID-qoS">
                                 <rect key="frame" x="16" y="123" width="288" height="160"/>
@@ -171,6 +182,10 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="answerALabel" destination="CCa-qd-f18" id="tz6-V9-B5R"/>
+                        <outlet property="answerBLabel" destination="B3g-MZ-XiE" id="GP0-Fr-mVr"/>
+                        <outlet property="answerCLabel" destination="A2x-a3-Gp5" id="dgO-RQ-LyF"/>
+                        <outlet property="answerDLabel" destination="gh2-HC-Cso" id="P2X-OT-2AZ"/>
                         <outlet property="questionLabel" destination="Pgj-ID-qoS" id="FQ4-Ma-Koz"/>
                         <outlet property="questionNumberLabel" destination="zox-qa-tA7" id="El3-5h-UxX"/>
                         <outlet property="subjectLabel" destination="10K-DI-4qn" id="BSm-cn-zHf"/>
@@ -275,7 +290,4 @@
             <point key="canvasLocation" x="85.599999999999994" y="48.125937031484263"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="ZIg-34-heb"/>
-    </inferredMetricsTieBreakers>
 </document>
